--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,32 +61,32 @@ jobs:
           # Set output for use in later jobs
           echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-  test:
-    name: Test Application
-    runs-on: ubuntu-latest
-    needs: build
+  # test:
+  #   name: Test Application
+  #   runs-on: ubuntu-latest
+  #   needs: build
     
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          cache: 'pip'
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.10'
+  #         cache: 'pip'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
+  #         pip install pytest
 
-      - name: Run tests
-        run: |
-          echo "Running tests..."
-          # Add your test commands here
-          # pytest -v
+  #     - name: Run tests
+  #       run: |
+  #         echo "Running tests..."
+  #         # Add your test commands here
+  #         # pytest -v
 
   deploy-cdk:
     name: Deploy to AWS using CDK
@@ -145,7 +145,7 @@ jobs:
           cdk bootstrap aws://$CDK_DEFAULT_ACCOUNT/$CDK_DEFAULT_REGION || true
           
           # Deploy the stack
-          cdk deploy --require-approval never StockAnalysisStack --app="./run.sh"
+          cdk deploy --require-approval never StockAnalysisStack --app="python cdk/app.py"
 
   cleanup:
     name: Cleanup Old Images
