--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,7 @@ env:
   ECR_REPOSITORY: stock-analysis-app
   ECS_SERVICE: stock-analysis
   ECS_CLUSTER: stock-analysis-cluster
-  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
-  # ECR_REGISTRY: 462366532346.dkr.ecr..amazonaws.com
+  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
 
 jobs:
   build:
