--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "bs4>=0.0.2",
     "fastapi>=0.115.12",
     "fastparquet>=2024.11.0",
+    "flask>=3.1.0",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "loguru>=0.7.3",
