--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: streamlit-service
-  ECS_SERVICE: StreamlitServiceStack/StreamlitService/Service
-  ECS_CLUSTER: StreamlitServiceStack/StreamlitCluster
+  ECR_REPOSITORY: stock-analysis-app
+  ECS_SERVICE: stock-analysis-app-service 
+  ECS_CLUSTER: stock-analysis-app-cluster
 
 jobs:
   build-and-deploy:
@@ -45,7 +45,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          tags: 462366532346.dkr.ecr.us-east-1.amazonaws.com/stock-analysis-app:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
