--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,9 +45,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: 
-            - 462366532346.dkr.ecr.us-east-1.amazonaws.com/stock-analysis-app:${{ github.sha }}
-            - 462366532346.dkr.ecr.us-east-1.amazonaws.com/stock-analysis-app:latest
+          tags: 462366532346.dkr.ecr.us-east-1.amazonaws.com/stock-analysis-app:${{ github.sha }} , 462366532346.dkr.ecr.us-east-1.amazonaws.com/stock-analysis-app:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
      
