--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Deploy with CDK
         if: github.ref == 'refs/heads/main'
         run: |
-          cdk deploy streamlit-service-stack --require-approval never --app=--app="python ${PWD}/cdk/app.py"
+          cdk deploy streamlit-service-stack --require-approval never --app="python ${PWD}/cdk/app.py"
 
       - name: Force update ECS service to use latest image
         if: github.ref == 'refs/heads/main'
